update dependencies and plugins in pom.xml